feat: 添加灵元受控恢复能力
实现灵元从 ERROR/DEGRADED 状态受控恢复的能力，包括：
1. 新增 RECOVERING 状态用于表示恢复中
2. 扩展治理策略支持重试次数和回退值配置
3. 终端调用过滤器实现自动重试和回退逻辑
4. 生命周期引擎添加恢复流程
5. 控制台界面支持触发恢复操作

新增功能允许运维人员在灵元异常时进行恢复操作，而无需完全重启实例